Исправление ошибок и доделывание списка серверов